--- a/src/main/java/com/ylw/url2epub/view/MainView.fxml
+++ b/src/main/java/com/ylw/url2epub/view/MainView.fxml
@@ -1,60 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.BoxBlur?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.TextArea?>
+<?import com.ylw.url2epub.view.JavascriptCodeEdit?>
+<?import org.fxmisc.flowless.VirtualizedScrollPane?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.ProgressBar?>
 
 <BorderPane xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1"
 	fx:controller="com.ylw.url2epub.view.MainViewController">
+	<left>
+		<VBox prefWidth="200">
+			<GridPane>
+				<columnConstraints>
+					<ColumnConstraints prefWidth="60" halignment="RIGHT" />
+					<ColumnConstraints hgrow="ALWAYS" />
+				</columnConstraints>
+				<rowConstraints>
+					<RowConstraints valignment="CENTER" prefHeight="30" />
+					<RowConstraints valignment="CENTER" prefHeight="30" />
+					<RowConstraints valignment="CENTER" prefHeight="30" />
+					<RowConstraints valignment="CENTER" prefHeight="30" />
+				</rowConstraints>
+				<children>
+					<Label text="书名 " GridPane.rowIndex="0" GridPane.columnIndex="0" />
+					<TextField fx:id="textBookName" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+					<Label text="作者 " GridPane.rowIndex="1" GridPane.columnIndex="0" />
+					<TextField fx:id="textAuthor" GridPane.rowIndex="1" GridPane.columnIndex="1" />
+					<Label text="articleId " GridPane.rowIndex="2"
+						GridPane.columnIndex="0" />
+					<TextField fx:id="textArticleId" GridPane.rowIndex="2" GridPane.columnIndex="1" />
+					<Button text="选择封面" GridPane.rowIndex="3"
+						GridPane.columnIndex="1" onAction="#selCover"/>
+				</children>
+			</GridPane>
+			<ImageView VBox.vgrow="ALWAYS" fx:id="bookPic" />
+		</VBox>
+	</left>
 	<center>
-		<Pane prefHeight="541.0" prefWidth="637.0" BorderPane.alignment="CENTER">
+		<VBox HBox.hgrow="ALWAYS">
+			<padding>
+				<Insets left="10" right="10" top="10" bottom="10" />
+			</padding>
 			<children>
-				<Label layoutX="36.0" layoutY="19.0" text="书名" />
-				<TextField fx:id="book_name" layoutX="74.0" layoutY="15.0" />
-				<Label layoutX="36.0" layoutY="52.0" text="作者" />
-				<TextField fx:id="author" layoutX="74.0" layoutY="48.0" />
-				<ImageView fitHeight="150.0" fitWidth="200.0" layoutX="423.0"
-					layoutY="16.0" pickOnBounds="true" preserveRatio="true" styleClass="bg-red"
-					translateZ="10.0">
-					<cursor>
-						<Cursor fx:constant="MOVE" />
-					</cursor>
-					<effect>
-						<BoxBlur />
-					</effect>
-				</ImageView>
-				<ProgressBar fx:id="progress" layoutX="26.0" layoutY="479.0"
-					prefHeight="18.0" prefWidth="585.0" progress="0.0" />
-				<Label layoutX="14.0" layoutY="84.0" text="Articleid" />
-				<TextField fx:id="articleid" layoutX="74.0" layoutY="80.0" />
-				<Label layoutX="31.0" layoutY="117.0" text="Cover" />
-				<Label fx:id="cover_path" layoutX="76.0" layoutY="144.0" text="Label" />
-				<Button layoutX="76.0" layoutY="113.0" mnemonicParsing="false"
-					onMouseClicked="#selectPicture" text="选择封面图片" />
-				<ImageView fitHeight="199.0" fitWidth="159.0" layoutX="75.0"
-					layoutY="166.0" pickOnBounds="true" preserveRatio="true"
-					styleClass="cover_bg" />
-				<Button layoutX="568.0" layoutY="504.0" mnemonicParsing="false"
-					onMouseClicked="#startPull" text="开始" />
-				<Label layoutX="262.0" layoutY="19.0" text="网址" />
-				<Label layoutX="262.0" layoutY="52.0" text="深度" />
-				<Label layoutX="262.0" layoutY="84.0" text="网址过滤规则" />
-				<Label layoutX="262.0" layoutY="285.0" text="章节排序规则" />
-				<StackPane fx:id="url_rule" layoutX="274.0" layoutY="113.0"
-					prefHeight="162.0" prefWidth="337.0" />
-				<StackPane fx:id="chapter_rule" layoutX="274.0" layoutY="308.0"
-					prefHeight="143.0" prefWidth="336.0" />
-				<TextField layoutX="309.0" layoutY="15.0" prefHeight="23.0"
-					prefWidth="311.0" />
-				<TextField layoutX="309.0" layoutY="48.0" />
+				<HBox alignment="CENTER" prefHeight="30">
+					<Label text="URL " alignment="CENTER_RIGHT" prefWidth="30" />
+					<TextField fx:id="textUrl" HBox.hgrow="ALWAYS" />
+				</HBox>
+				<HBox alignment="CENTER" prefHeight="30">
+					<Label text="深度 " alignment="CENTER_RIGHT" prefWidth="30" />
+					<TextField fx:id="textDeep" HBox.hgrow="ALWAYS" />
+				</HBox>
+				<Label text="URL filter:" />
+				<StackPane VBox.vgrow="ALWAYS" fx:id="filterStack">
+					<padding>
+						<Insets left="10" right="10" top="10" bottom="10" />
+					</padding>
+					<JavascriptCodeEdit fx:id="filterCode"/>
+				</StackPane>
+				<Label text="Chapter order:" />
+				<StackPane VBox.vgrow="ALWAYS" fx:id="chapterStack">
+					<padding>
+						<Insets left="10" right="10" top="10" bottom="10" />
+					</padding>
+					<JavascriptCodeEdit fx:id="chapterCode"/>
+				</StackPane>
 			</children>
-		</Pane>
+		</VBox>
 	</center>
+	<bottom>
+		<HBox>
+			<padding>
+				<Insets left="10" right="10" top="10" bottom="10" />
+			</padding>
+			<ProgressBar fx:id="progressBar" progress="0.3" maxWidth="999999999" HBox.hgrow="ALWAYS"/>
+		</HBox>
+	</bottom>
 </BorderPane>
